更改新添加colorful主题

--- a/theme/colorful/layout.ejs
+++ b/theme/colorful/layout.ejs
@@ -12,4 +12,23 @@
     
 </div>
 
+<script>
+    window.onload = function(){
+        var linkArray = document.querySelectorAll(".page-toc a");
+        var pathname = location.pathname;
+        var origin = location.origin
+        console.log(pathname)
+        linkArray.forEach(function(dom, k){
+            var id = dom.href.replace(origin+pathname+"#", '');
+            dom.removeAttribute("href")
+            dom.setAttribute("data-to", id)
+            var target = document.getElementById(id);
+            dom.onclick = function(){
+                document.body.scrollTop = target.offsetTop - 80
+            }
+            
+        })
+    }
+</script>
+
 <% include footer.ejs %>
