--- a/theme/colorful/header.ejs
+++ b/theme/colorful/header.ejs
@@ -1,12 +1,14 @@
-<div class="nav">
-    <div class="logo">
-        <%if(pkg.idoc.logo){%>
-            <img src="<%=relative_path%><%=pkg.idoc.logo%>">
-        <%}else{%>
-            <%= title %>
-        <%}%>
+<div class="nav-content">
+    <div class="nav">
+        <div class="logo">
+            <%if(pkg.idoc.logo){%>
+                <img src="<%=relative_path%><%=pkg.idoc.logo%>">
+            <%}else{%>
+                <%= title %>
+            <%}%>
+        </div>
+        <%- menu_html -%>
     </div>
-<%- menu_html -%>
 </div>
 
 <% if(pkg&&pkg.repository&&pkg.repository.url) {%>
